--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=24.11.1"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
-  },
-  "engines": {
-    "node": ">=24.11.1",
-    "npm": ">=11.6.2"
   },
   "dependencies": {
     "next": "^16.0.7",
